Add local FFmpeg support and automatic download
- Create ffmpeg/ directory for local binaries
- Add download_ffmpeg.py for automatic FFmpeg download from GitHub releases
- Update audio_service.py to use local FFmpeg binaries first, then system PATH
- Add get_ffmpeg_path() and get_ffprobe_path() functions for flexible binary location
- Update install_requirements.py to check local FFmpeg and download if needed
- Add FFmpeg binaries to .gitignore (downloaded automatically, not committed)
- Users can now run without system FFmpeg installation

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,12 @@ data/audio/
 data/broadcast_history.json
 data/*.json
 !data/__init__.py
+
+# FFmpeg binaries (will be downloaded automatically)
+ffmpeg/*.exe
+ffmpeg/*.dll
+ffmpeg/*.zip
+!ffmpeg/README.md
+
+# Temporary download files
+temp/
